coler theam change 2nd stage

--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -11,8 +11,17 @@
 
 @media (max-width: 768px) {
     .logo-image {
-        width: 71px; 
-        height: 65px;
+        width: 90px; 
+        height: 90px;
+    }
+    .mil-banner {
+        margin-top: 9rem;
+    }
+}
+@media (max-width: 1200px) {
+    .logo-image {
+        width: 108px; 
+        height: 108px;
     }
 }
 </style>
@@ -88,11 +97,11 @@
                                             <h6 class="mil-muted mil-mb-30">Business Consulting</h6>
 
                                             <ul class="mil-menu-list">
-                                                <li><a href="" class="mil-light-soft">Management counsulling</a></li>
-                                                <li><a href="" class="mil-light-soft">Marketing and sale counsulling</a></li>
-                                                <li><a href="" class="mil-light-soft">IT / Technology counsulling</a></li>
-                                                <li><a href="" class="mil-light-soft">HR and Recruitment counsulling</a></li>
-                                                <li><a href="" class="mil-light-soft">Operation counsulling</a></li>
+                                                <li><a href="" class="mil-dark-soft">Management counsulling</a></li>
+                                                <li><a href="" class="mil-dark-soft">Marketing and sale counsulling</a></li>
+                                                <li><a href="" class="mil-dark-soft">IT / Technology counsulling</a></li>
+                                                <li><a href="" class="mil-dark-soft">HR and Recruitment counsulling</a></li>
+                                                <li><a href="" class="mil-dark-soft">Operation counsulling</a></li>
                                                 
                                             </ul>
 
@@ -102,11 +111,11 @@
                                             <h6 class="mil-muted mil-mb-30">Training&Recruitment</h6>
 
                                             <ul class="mil-menu-list">
-                                                <li><a href="" class="mil-light-soft">Employee Onboarding</a></li>
-                                                <li><a href="" class="mil-light-soft">Skill development</a></li>
-                                                <li><a href="" class="mil-light-soft">Leadership development </a></li>
-                                                <li><a href="" class="mil-light-soft">Corporate Training</a></li>
-                                                <li><a href="" class="mil-light-soft">Campus Recruitment</a></li>
+                                                <li><a href="" class="mil-dark-soft">Employee Onboarding</a></li>
+                                                <li><a href="" class="mil-dark-soft">Skill development</a></li>
+                                                <li><a href="" class="mil-dark-soft">Leadership development </a></li>
+                                                <li><a href="" class="mil-dark-soft">Corporate Training</a></li>
+                                                <li><a href="" class="mil-dark-soft">Campus Recruitment</a></li>
                                             </ul>
 
                                         </div>
@@ -118,14 +127,14 @@
 
                                             <h6 class="mil-muted mil-mb-30">Whitefield</h6>
 
-                                            <p class="mil-light-soft mil-up">GoSpaze Realty , Varthur Main Rd  , Thubarahalli , Bengaluru <span class="mil-no-wrap">560066</span></p>
+                                            <p class="mil-dark-soft mil-up">GoSpaze Realty , Varthur Main Rd  , Thubarahalli , Bengaluru <span class="mil-no-wrap">560066</span></p>
 
                                         </div>
                                         <div class="col-lg-4 mil-mb-60">
 
                                             <h6 class="mil-muted mil-mb-30">HSR Layout</h6>
 
-                                            <p class="mil-light-soft">3rd Floor , 5th Main , 6thAve St , Teachers Colony , Koramangala <span class="mil-no-wrap">560034</span></p>
+                                            <p class="mil-dark-soft">3rd Floor , 5th Main , 6thAve St , Teachers Colony , Koramangala <span class="mil-no-wrap">560034</span></p>
 
                                         </div>
                                     </div>
