--- a/public/user/css/style.css
+++ b/public/user/css/style.css
@@ -1236,17 +1236,22 @@ frame
 @media screen and (max-width: 1200px) {
   .mil-frame .mil-frame-top {
     height: 90px;
-    background-color: rgba(0, 0, 0, 0.95);
-    border-bottom: solid 1px rgba(255, 255, 255, 0.1);
+    background-color: #ffffff;
+    /* border-bottom: solid 1px rgba(255, 255, 255, 0.1); */
+    border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+
+
     padding: 0 30px;
     -webkit-backdrop-filter: blur(8px);
             backdrop-filter: blur(8px);
   }
   .mil-frame .mil-frame-top .mil-logo {
-    color: rgb(255, 255, 255);
+    /* color: rgb(255, 255, 255); */
+    color: rgb(0, 0, 0); /* Black text for logo */
   }
   .mil-frame .mil-frame-top .mil-menu-btn span, .mil-frame .mil-frame-top .mil-menu-btn span:after, .mil-frame .mil-frame-top .mil-menu-btn span:before {
-    background: rgb(255, 255, 255);
+    /* background: rgb(255, 255, 255); */
+    background: rgb(0, 0, 0); /* Black color for menu icon */
   }
 }
 .mil-frame .mil-frame-bottom {
@@ -1401,7 +1406,7 @@ menu
   color: rgb(255, 255, 255);
 }
 .mil-menu-frame .mil-frame-top .mil-menu-btn span, .mil-menu-frame .mil-frame-top .mil-menu-btn span:after, .mil-menu-frame .mil-frame-top .mil-menu-btn span:before {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
 }
 .mil-menu-frame .mil-main-menu {
   -webkit-transform: translateX(-30px);
