--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -24,6 +24,12 @@
         height: 108px;
     }
 }
+@media screen and (max-width: 768px) {
+    h3, .mil-h3 {
+        font-size: 30px;
+        margin-top: -6rem;
+    }
+}
 </style>
         <!-- menu -->
         <div class="mil-menu-frame">
@@ -192,7 +198,7 @@
                         <div class="container">
                             <div class="mil-banner-content mil-up">
 
-                                <h1 class="mil-muted mil-mb-60">Designer <span class="mil-thin">of your</span><br> Dream <span class="mil-thin"></span></h1>
+                                <h1 class="mil-muted mil-mb-60" style="padding-top: 6rem;">Designer <span class="mil-thin">of your</span><br> Dream <span class="mil-thin"></span></h1>
                                 <div class="row">
                                     <div class="col-md-7 col-lg-5">
 
