Fav Icon and i phone icone set

--- a/views/user/head.ejs
+++ b/views/user/head.ejs
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="user/css/style.css">
     <!-- page name -->
     <title>Bestract</title>
+    <link href="/user/Images/Low/11111.png" rel="apple-touch-icon">
+    <link href="/user/Images/Low/11111.png" rel="icon">
 
 </head>
 
