partners logo added

--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -678,16 +678,31 @@
                         <div class="swiper-container mil-infinite-show mil-up">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <a href="" class="mil-partner-frame" style="width: 60px;"><img src="user/img/partners/1.svg" alt="logo"></a>
+                                    <a href="" class="mil-partner-frame" style="width: 180px;"><img src="user/partners/Iaeknir2.jpg" alt="logo"></a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="" class="mil-partner-frame" style="width: 100px;"><img src="user/img/partners/2.svg" alt="logo"></a>
+                                    <a href="" class="mil-partner-frame" style="width: 140px;"><img src="user/partners/Lulu.png" alt="logo"></a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="" class="mil-partner-frame" style="width: 60px;"><img src="user/img/partners/1.svg" alt="logo"></a>
+                                    <a href="" class="mil-partner-frame" style="width: 160px;"><img src="user/partners/Castle.png" alt="logo"></a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="" class="mil-partner-frame" style="width: 100px;"><img src="user/img/partners/2.svg" alt="logo"></a>
+                                    <a href="" class="mil-partner-frame" style="width: 180px;"><img src="user/partners/IZee Bschool Logo.png" alt="logo"></a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="" class="mil-partner-frame" style="width: 180px;"><img src="user/partners/Mibo - Logo.png" alt="logo"></a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="" class="mil-partner-frame" style="width: 140px;"><img src="user/partners/NahadhiMandhi.jpg" alt="logo"></a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="" class="mil-partner-frame" style="width: 160px;"><img src="user/partners/OFCJNS.jpg" alt="logo"></a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="" class="mil-partner-frame" style="width: 140px;"><img src="user/partners/SoofiMandhi.jpg" alt="logo"></a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="" class="mil-partner-frame" style="width: 140px;"><img src="user/partners/Subz.png" alt="logo"></a>
                                 </div>
                             </div>
                         </div>
